test/tests/compiler/9_functions/invalid_types/call_variable_as_function.plx
pub fn x(none) i32;

pub fn main(none) i32 {
    x: i32 = 0
    #  x isn't a function, so you can't call it 
    return x()
}
